<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_todo_black_24dp"
            android:title="@string/menu_todo" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes_black_24dp"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

</menu>
